Fixed dropdown placement on smaller screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,13 @@ button.close {
         width: 99%;
         margin: 10px auto;
     }
+
+    #pokemon-type__dropdown {
+        text-align: center;
+        background-color: var(--secondary-color);
+        font-size: var(--normal-font-size);
+        margin-top: 60px;
+    }
 }
 @media screen and (max-width: 750px) {
 
